# job-researcher

./: .env.example  .gitignore  .mailmap  README.md  config.example.yaml  job_harvest.sh  job_researcher.sh  package.json  pyproject.toml  requirements.txt
agent-pack/: README.md  install-codex-skill.ps1  install-codex-skill.sh
agent-pack/codex/job-posting-collector/: SKILL.md
agent-pack/codex/job-posting-collector/agents/: openai.yaml
agent-pack/codex/job-posting-collector/references/: collection-charter.md  site-playbook.md
agent-pack/generic/claude-code/: CLAUDE.md
agent-pack/generic/gemini/: GEMINI.md
docs/: profile-based-collection-plan.ko.md  project-identity.ko.md
docs/research/: job-site-filters.ko.md
job_harvest/: __init__.py  __main__.py  ai_enrichment.py  browser_collectors.py  browser_runtime.py  candidate_profile.py  config.py  crawler.py  database.py  db_models.py  extract.py  filter_taxonomy.py  i18n.py  models.py  profile_fit.py  query_planner.py  raw_store.py  request_parser.py  runner.py  scheduler.py  schemas.py  search.py  server.py  services.py  sites.py  storage.py
job_harvest/static/: app.css  app.js
job_harvest/templates/: base.html  dashboard.html  job_detail.html  jobs.html  raw_snapshot.html  run_detail.html  settings.html
job_researcher/: __init__.py  __main__.py
packaging/homebrew/: job-researcher.rb
tests/: test_browser_collectors.py  test_config.py  test_enrichment.py  test_extract.py  test_filter_taxonomy.py  test_profile_fit.py  test_query_planner.py  test_request_parser.py  test_runner.py  test_server.py
